# hc-http-gw

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  spec.md
.github/workflows/: cargo_update.yaml  flake_update.yaml  general.yaml  test.yaml
fixture/: Cargo.toml  package.sh
fixture/coordinator1/: Cargo.toml
fixture/coordinator1/src/: lib.rs
fixture/coordinator2/: Cargo.toml
fixture/coordinator2/src/: lib.rs
fixture/integrity/: Cargo.toml
fixture/integrity/src/: lib.rs
fixture/package/dna1/: dna.yaml
fixture/package/dna2/: dna.yaml
fixture/package/happ1/: happ.yaml
fixture/package/happ2/: happ.yaml
src/: admin_websocket.rs  admin_ws.rs  app_conn_pool.rs  app_selection.rs  cli.rs  config.rs  error.rs  holochain.rs  http.rs  lib.rs  middleware.rs  resolve.rs  router.rs  routes.rs  service.rs  test.rs  test_tracing.rs  tracing.rs  transcode.rs
src/holochain/: admin_conn.rs  app_conn_pool.rs
src/middleware/: validate_zome_call_payload.rs  validate_zome_call_payload_limit.rs  validate_zome_call_payload_size.rs
src/routes/: app_selection.rs  health_check.rs  healthz.rs  zome_call.rs
src/routes/zome_call/: tests.rs
src/routes/zome_call/tests/: responses.rs  validations.rs
src/test/: data.rs  router.rs  test_tracing.rs
tests/: health.rs  websocket.rs  zome_call.rs
tests/integration/: health.rs  main.rs  setup.rs  zome_call.rs
tests/setup/: hc_sandbox.rs  mod.rs
tests/sweet/: mod.rs
