[package]
name = "holochain_http_gateway"
version = "0.3.0"
description = "The Holochain HTTP Gateway for providing a way to bridge from the web2 world into Holochain"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
homepage = "https://github.com/holochain/hc-http-gw"
license = "Apache-2.0"
repository = "https://github.com/holochain/hc-http-gw"
edition = "2021"

[[bin]]
name = "hc-http-gw"
path = "./src/bin/hc-http-gw.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
holochain_client = "0.8.0-dev.24"
holochain_conductor_api = "0.6.0-dev.27"
holochain_types = "0.6.0-dev.27"
holochain_websocket = "0.6.0-dev.27"
serde = { version = "1", features = ["derive"] }
serde_json = { package = "hc_serde_json", version = "1" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "registry",
] }
url = "2"

[dev-dependencies]
holochain_http_gateway = { path = ".", features = ["test-utils"] }

assert2 = "0.3"
holochain = { version = "0.6.0-dev.27", default-features = false, features = [
  "sqlite-encrypted",
  "wasmer_sys",
  "sweettest",
  "datachannel-vendored",
] }
http-body-util = "0.1"
mockall = "0.13"
reqwest = { version = "0.12", default-features = false }
tower = "0.5"
holochain_serialized_bytes = "0.0"

[features]
test-utils = []
